Intermediary check-in for removing scala and moving to Java 14.